# FastApi--Password-Generator

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.Workers  README.md  Readme.md  compose.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: master.yaml
app/: main.py
app/core/: exceptions.py  middleware.py  settings.py  telemetry.py
app/router/: password_routes.py
app/router/v1/: __init__.py  app_routes.py  error_routes.py  password_routes.py
app/schemas/: Input_scheme.py  Output_Scheme.py  custom_base_model.py  input_schemas.py  output_schemas.py
app/test/routers/: test_get_password_route.py  test_get_pin_route.py  test_password_routes.py  test_post_complex_password_route.py
app/test/schema/: test_input_schema.py  test_output_schema.py
app/test/schemas/: test_input_schema.py  test_output_schema.py
app/test/use_cases/: test_complex_password_use_case.py  test_pass_password_use_case.py  test_pin_password_use_case.py
app/use_cases/: password.py
argocd/: prod.yaml
k8s/: certficate.yaml  config-map.yaml  default-headers.yaml  deployment-multiple-workers.yaml  deployment-service.yaml  deployment.yaml  hpa.yaml  http-route.yaml  ingress.yaml  namespace.yaml  scaled-object.yaml  service.yaml  svc-2.yaml
test/: conftest.py
test/routers/: test_get_password_route.py  test_get_pin_route.py  test_post_complex_password_route.py
test/schemas/: test_input_schema.py  test_output_schema.py
test/use_cases/: test_complex_password_use_case.py  test_pass_password_use_case.py  test_pin_password_use_case.py
