[tool.poetry]
name = "passwordgenerator"
version = "0.1.0"
description = "This package provides a simple and efficient solution for generating random passwords with options for uppercase letters, lowercase letters, and optional accents. The package includes a user-friendly API, robust algorithms for generating secure passwords, and features to verify password strength. Overall, this package is a useful and versatile tool for ensuring password security in applications and systems."
authors = ["GabrielCarvalho <gabrielcarvalho.workk@gmail.com>"]
license = "Open source license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
requests = "^2.29.0"
aiohttp = "^3.8.4"
pydantic = "^1.10.7"
pytest = "^7.3.1"
asyncio = "^3.4.3"
httpx = "^0.24.0"
pytest-asyncio = "^0.21.0"
email-validator = "^2.0.0.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
